Fixing dimensions on mobile phones

--- a/css/_gamePage.css
+++ b/css/_gamePage.css
@@ -41,7 +41,7 @@ img{
         height: 200px;
     }
     .hereText{
-        font-size: 70px;
+        font-size: 60px;
     }
     .deps{
         font-size: 60px;
